--- a/BookStore.UI/BookStore.UI.csproj
+++ b/BookStore.UI/BookStore.UI.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
-    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="TableTower.Core" Version="1.0.8" />
   </ItemGroup>
 
   <ItemGroup>
